--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "formidable": "^3.5.1",
+    "fs": "^0.0.1-security",
+    "mongodb": "^6.7.0",
+    "mongoose": "^8.4.0",
+    "next": "14.2.3",
+    "path": "^0.12.7",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "postcss": "^8",
